--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <title>JS basics</title>
 </head>
 <body>
+<div class="container">
+  <!-- Page Content goes here -->
+  <div class="row">
+    <div class="col s12 m6">
+      <div class="card yellow">
+        <div class ="card-content">
+          <span class="card-title"></span>
+          <div class="row">
+            <form class="col s12">
+              <div class="row">
+                <div class="inoput-field col s6">
+                  <input type="text", id="task">
+                  <label for="task">new task</label>
+                </div>
+              </div>
+              <div class="row">
+                <input type="submit" class="btn">
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class ="card-action">
+          <span class="card-title">My task</span>
+          <ul class="collection">
+            <li class="collection-item">Study CSS <a href="#" class="blue-text text-darken">a</a></li>
+            <li class="collection-item">Study JS<a href="#" class="blue-text text-darken">a</a></li>
+            <li class="collection-item"><a href="#" class="blue-text text-darken"></a>Study node.js</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+<script src="classes/Task.js"></script>
+<script src="classes/UI.js"></script>
+<script src="classes/LS.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
