--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>JS basics</title>
 </head>
@@ -13,37 +14,38 @@
   <!-- Page Content goes here -->
   <div class="row">
     <div class="col s12 m6">
-      <div class="card yellow">
-        <div class ="card-content">
-          <span class="card-title"></span>
+      <div class="card">
+        <div class="card-content">
+          <span class="card-title">Task List</span>
           <div class="row">
-            <form class="col s12">
+            <form class="col s12" id="task-form">
               <div class="row">
-                <div class="inoput-field col s6">
-                  <input type="text", id="task">
-                  <label for="task">new task</label>
+                <div class="input-field col s6">
+                  <input type="text" id="task">
+                  <label for="task">New Task</label>
                 </div>
               </div>
               <div class="row">
-                <input type="submit" class="btn">
+                <div class="col s6">
+                  <input type="submit" class="btn">
+                </div>
               </div>
             </form>
           </div>
         </div>
-        <div class ="card-action">
-          <span class="card-title">My task</span>
+        <div class="card-action">
+          <span class="card-title" id="task-title">My Tasks</span>
           <ul class="collection">
-            <li class="collection-item">Study CSS <a href="#" class="blue-text text-darken">a</a></li>
-            <li class="collection-item">Study JS<a href="#" class="blue-text text-darken">a</a></li>
-            <li class="collection-item"><a href="#" class="blue-text text-darken"></a>Study node.js</li>
+            <li class="collection-item">Study HTML <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
+            <li class="collection-item">Study CSS <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
+            <li class="collection-item">Study JS <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
+            <li class="collection-item">Study Node.js <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
           </ul>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 <script src="classes/Task.js"></script>
 <script src="classes/UI.js"></script>
