--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>JS basics</title>
 </head>
@@ -18,16 +17,18 @@
         <div class="card-content">
           <span class="card-title">Task List</span>
           <div class="row">
-            <form class="col s12" id="task-form">
+            <form class="col s12">
               <div class="row">
                 <div class="input-field col s6">
                   <input type="text" id="task">
-                  <label for="task">New Task</label>
+                  <label for="task">New task</label>
                 </div>
               </div>
               <div class="row">
-                <div class="col s6">
-                  <input type="submit" class="btn">
+                <div class="row">
+                  <div class="col s6">
+                    <input type="submit" class="btn">
+                  </div>
                 </div>
               </div>
             </form>
@@ -36,17 +37,14 @@
         <div class="card-action">
           <span class="card-title" id="task-title">My Tasks</span>
           <ul class="collection">
-            <li class="collection-item">Study HTML <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
-            <li class="collection-item">Study CSS <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
-            <li class="collection-item">Study JS <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
-            <li class="collection-item">Study Node.js <a href="#" class="blue-text text-darken-2 secondary-content">X</a></li>
           </ul>
+        <a href="#" id="clear-tasks" class="btn grey">Delete Tasks</a>
         </div>
       </div>
     </div>
   </div>
 </div>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="classes/Task.js"></script>
 <script src="classes/UI.js"></script>
 <script src="classes/LS.js"></script>
