--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <title>JS basics</title>
 </head>
@@ -17,18 +18,16 @@
         <div class="card-content">
           <span class="card-title">Task List</span>
           <div class="row">
-            <form class="col s12">
+            <form class="col s12" id="task-form">
               <div class="row">
                 <div class="input-field col s6">
                   <input type="text" id="task">
-                  <label for="task">New task</label>
+                  <label for="task">New Task</label>
                 </div>
               </div>
               <div class="row">
-                <div class="row">
-                  <div class="col s6">
-                    <input type="submit" class="btn">
-                  </div>
+                <div class="col s6">
+                  <input type="submit" class="btn">
                 </div>
               </div>
             </form>
@@ -38,16 +37,18 @@
           <span class="card-title" id="task-title">My Tasks</span>
           <ul class="collection">
           </ul>
-        <a href="#" id="clear-tasks" class="btn grey">Delete Tasks</a>
+          <a href="#" class="btn" id="del-tasks">Clear All Tasks</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+<!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="classes/Task.js"></script>
-<script src="classes/UI.js"></script>
+
 <script src="classes/LS.js"></script>
+<script src="classes/UI.js"></script>
+<script src="classes/Task.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
